fix text-overflow

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -175,7 +175,7 @@ $_jigsass-overflow-props: (
 );
 $_jigsass-overflow-vals: (
   a: auto,
-  c: clamp,
+  c: clip,
   e: ellipsis,
   h: hidden,
   s: scroll,
